# cmd/api/docs/swagger.yaml
@@ -30,9 +30,9 @@ definitions:
     type: object
   handlers.LanguageTagBody:
     properties:
-      iso_code_1:
+      iso_639_1:
         type: string
-      iso_code_2:
+      iso_639_2:
         type: string
       name:
         type: string
@@ -41,9 +41,9 @@ definitions:
     properties:
       id:
         type: integer
-      iso_code_1:
+      iso_639_1:
         type: string
-      iso_code_2:
+      iso_639_2:
         type: string
       name:
         type: string
@@ -54,9 +54,9 @@ definitions:
     properties:
       id:
         type: integer
-      iso_code_1:
+      iso_639_1:
         type: string
-      iso_code_2:
+      iso_639_2:
         type: string
       name:
         type: string
@@ -65,8 +65,6 @@ definitions:
     properties:
       description:
         type: string
-      is_iana_language_sub_tag:
-        type: boolean
       language_tag_id:
         type: integer
       variant_tag:
@@ -78,8 +76,6 @@ definitions:
         type: string
       id:
         type: integer
-      is_iana_language_sub_tag:
-        type: boolean
       language_tag_id:
         type: integer
       variant_tag:
@@ -105,7 +101,15 @@ paths:
     get:
       consumes:
       - application/json
-      description: Retrieves a list of all countries
+      description: Retrieves a list of countries filtered by language IDs
+      parameters:
+      - collectionFormat: csv
+        description: Filter by language IDs
+        in: query
+        items:
+          type: integer
+        name: language_ids
+        type: array
       produces:
       - application/json
       responses:
@@ -115,7 +119,15 @@ paths:
             items:
               $ref: '#/definitions/handlers.GetAllCountriesResponse'
             type: array
-      summary: Get all countries
+        "400":
+          description: Invalid language_ids parameter
+          schema:
+            type: string
+        "500":
+          description: Failed to get countries
+          schema:
+            type: string
+      summary: Get filtered countries
       tags:
       - Country
     post:
